--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -1,5 +1,5 @@
 {
-  "open_local": "Open local config file",
-  "view_on_github": "View on GitHub",
-  "dark_mode": "Dark Mode"
+  "openLocal": "Open local config file",
+  "viewOnGithub": "View on GitHub",
+  "darkMode": "Dark Mode"
 }
