--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -7,6 +7,7 @@
     "failed": "读取失败"
   },
   "ok": "好",
+  "hoverTip": "鼠标悬浮于下面的选项上可获得更多信息。",
   "enableCSL": "启用 CustomSkinLoader",
   "enableSkull": "启用头颅加载",
   "enableDynamicSkull": "启用动态头颅",
